feat(agent): enforce atomic replan application boundary